<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_margin="10sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="20sp"
        android:backgroundTint="#7782C8"
        android:foregroundGravity="center"
        android:overScrollMode="ifContentScrolls"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="30dp">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="321dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:autoSizeMinTextSize="20sp"
                android:gravity="center"
                android:text="@string/task_title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskDateItem"
                android:layout_width="251dp"
                android:layout_height="17dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/task_date"
                android:textColor="#3949AB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

            <CheckBox
                android:id="@+id/isDoneCheckBox"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/task_done_label"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/taskDateItem"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>